--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.piusvelte.wapdroid"
-      android:versionCode="1" android:versionName="1.0.3">
+      android:versionCode="1" android:versionName="1.0.4">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".Wapdroid"
 			android:label="@string/app_name">
@@ -21,6 +21,7 @@
 	<activity android:name="ManageCells"></activity>
 </application>
     <uses-sdk android:minSdkVersion="3" />
+    <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
