--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,19 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.piusvelte.wapdroid"
-      android:versionCode="48" android:versionName="1.3.0">
+      android:versionCode="51" android:versionName="2.0.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".Wapdroid"
+        <activity android:name=".WapdroidUI"
 			android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    <activity android:name="ManageNetworks"></activity>
-	<activity android:name="ManageCells"></activity>
-</application>
+    	<activity android:name=".ManageNetworks"></activity>
+		<activity android:name=".ManageCells"></activity>
+		<receiver android:name=".WapdroidServiceManager"
+			android:enabled="true"
+			android:exported="false"
+			android:label="WapdroidServiceManager">
+			<intent-filter>
+				<action android:name="android.intent.action.BOOT_COMPLETED"/>
+			</intent-filter>
+		</receiver>
+		<service android:name=".WapdroidService"/>
+	</application>
     <uses-sdk android:minSdkVersion="3" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"></uses-permission>
     <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
