--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.piusvelte.wapdroid"
-      android:versionCode="57" android:versionName="2.0.3">
+      android:versionCode="63" android:versionName="2.0.3">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".WapdroidUI"
 			android:label="@string/app_name">
@@ -13,12 +13,10 @@
     	<activity android:name=".Settings"></activity>
     	<activity android:name=".ManageNetworks"></activity>
 		<activity android:name=".ManageCells"></activity>
-		<receiver android:name=".WapdroidServiceManager"
-			android:enabled="true"
-			android:exported="false"
-			android:label="WapdroidServiceManager">
+		<receiver android:name=".WapdroidServiceManager">
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED"/>
+				<action android:name="com.piusvelte.wapdroid.WAKE_SERVICE"/>
 			</intent-filter>
 		</receiver>
 		<service android:name=".WapdroidService"/>
