--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.piusvelte.wapdroid"
-      android:versionCode="98" android:versionName="2.2.3">
+      android:versionCode="99" android:versionName="2.2.3">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".WapdroidUI"
 			android:label="@string/app_name">
@@ -16,6 +16,7 @@
 		<receiver android:name=".WapdroidServiceManager">
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED"/>
+				<action android:name="android.intent.action.ACTION_SCREEN_ON"/>
 				<action android:name="com.piusvelte.wapdroid.WAKE_SERVICE"/>
 			</intent-filter>
 		</receiver>
