--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.piusvelte.wapdroid"
-      android:versionCode="124" android:versionName="2.2.6">
+      android:versionCode="125" android:versionName="2.2.6">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".WapdroidUI"
 			android:label="@string/app_name">
@@ -30,8 +30,7 @@
             </intent-filter>
         </activity>
     	<activity android:name=".Settings"></activity>
-    	<activity android:name=".ManageNetworks"></activity>
-		<activity android:name=".ManageCells"></activity>
+    	<activity android:name=".ManageData"></activity>
 		<receiver android:name=".BootReceiver">
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED"/>
