--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.piusvelte.wapdroid"
-      android:versionCode="127" android:versionName="2.2.6">
+      android:versionCode="131" android:versionName="2.2.6">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".WapdroidUI"
 			android:label="@string/app_name">
@@ -31,6 +31,7 @@
         </activity>
     	<activity android:name=".Settings"></activity>
     	<activity android:name=".ManageData"></activity>
+    	<activity android:name=".MapData"></activity>
 		<receiver android:name=".BootReceiver">
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED"/>
@@ -38,6 +39,7 @@
 			</intent-filter>
 		</receiver>
 		<service android:name=".WapdroidService"/>
+		<uses-library android:name="com.google.android.maps" />
 	</application>
     <uses-sdk android:minSdkVersion="3"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"></uses-permission>
