--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.piusvelte.wapdroid"
-      android:versionCode="159" android:versionName="2.2.6">
+      android:versionCode="160" android:versionName="2.2.6">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".WapdroidUI"
 			android:label="@string/app_name">
@@ -34,12 +34,13 @@
     	<activity android:name=".MapData"></activity>
 		<receiver android:name=".BootReceiver">
 			<intent-filter>
-				<action android:name="android.intent.action.BOOT_COMPLETED"/>
-				<action android:name="com.piusvelte.wapdroid.WAKE_SERVICE"/>
+				<action android:name="android.intent.action.BOOT_COMPLETED" />
+				<action android:name="com.piusvelte.wapdroid.WAKE_SERVICE" />
 			</intent-filter>
 		</receiver>
-		<service android:name=".WapdroidService"/>
+		<service android:name=".WapdroidService" />
 		<uses-library android:name="com.google.android.maps" />
+		<meta-data android:value="a14c03f0ced257b" android:name="ADMOB_PUBLISHER_ID" />
 	</application>
     <uses-sdk android:minSdkVersion="3"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"></uses-permission>
@@ -51,4 +52,5 @@
     <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.BATTERY_STATS"/>
+    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
 </manifest> 
