--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.piusvelte.wapdroid"
-      android:versionCode="213" android:versionName="2.3.2">
+      android:versionCode="214" android:versionName="2.3.3">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".WapdroidUI"
 			android:label="@string/app_name">
@@ -36,6 +36,10 @@
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED" />
 				<action android:name="com.piusvelte.wapdroid.WAKE_SERVICE" />
+			</intent-filter>
+			<intent-filter>
+				<action android:name="android.intent.action.PACKAGE_REPLACED" />
+				<data android:scheme="package" android:path="com.piusvelte.wapdroid" />
 			</intent-filter>
 		</receiver>
 		<service android:name=".WapdroidService" />
