--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,10 +20,11 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.piusvelte.wapdroid"
-      android:versionCode="214" android:versionName="2.3.3">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+      android:versionCode="215" android:versionName="2.4">
+    <application android:icon="@drawable/icon" android:label="@string/app_name"
+    android:backupAgent="BackupAgentWrapper">
         <activity android:name=".WapdroidUI"
-			android:label="@string/app_name">
+		android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -45,6 +46,8 @@
 		<service android:name=".WapdroidService" />
 		<uses-library android:name="com.google.android.maps" />
 		<meta-data android:value="a14c03f0ced257b" android:name="ADMOB_PUBLISHER_ID" />
+		<meta-data android:name="com.google.android.backup.api_key"
+		android:value="AEdPqrEAAAAIlersG5aLPTzpSy9UnEVOLZD14LQ-XUa654IkZg" />
 	</application>
     <uses-sdk android:minSdkVersion="3"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"></uses-permission>
