--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,9 +20,8 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.piusvelte.wapdroid"
-      android:versionCode="216" android:versionName="2.4">
-    <application android:icon="@drawable/icon" android:label="@string/app_name"
-    android:backupAgent="BackupAgentWrapper">
+      android:versionCode="217" android:versionName="2.4">
+    <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".WapdroidUI"
 		android:label="@string/app_name">
             <intent-filter>
