--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.piusvelte.wapdroid"
-      android:versionCode="244" android:versionName="2.4.6">
+      android:versionCode="245" android:versionName="2.4.6">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".WapdroidUI"
 		android:label="@string/app_name">
@@ -32,7 +32,7 @@
     	<activity android:name=".Settings"></activity>
     	<activity android:name=".ManageData"></activity>
     	<activity android:name=".MapData"></activity>
-		<receiver android:name=".BootReceiver">
+		<receiver android:name=".Receiver">
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED" />
 				<action android:name="com.piusvelte.wapdroid.WAKE_SERVICE" />
