--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.piusvelte.wapdroid"
-      android:versionCode="261" android:versionName="2.6.1"
+      android:versionCode="262" android:versionName="2.6.2"
       android:installLocation="auto">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".WapdroidUI"
@@ -37,6 +37,7 @@
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED" />
 				<action android:name="com.piusvelte.wapdroid.WAKE_SERVICE" />
+				<action android:name="android.intent.action.EXTERNAL_APPLICATIONS_AVAILABLE" />
 			</intent-filter>
 			<intent-filter>
 				<action android:name="android.intent.action.PACKAGE_REPLACED" />
