--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,9 +20,9 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.piusvelte.wapdroid"
-      android:versionCode="273" android:versionName="2.7.3"
+      android:versionCode="274" android:versionName="2.7.4"
       android:installLocation="auto">
-    <application android:name="App" android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".WapdroidUI"
 		android:label="@string/app_name">
             <intent-filter>
