--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.piusvelte.wapdroid"
-      android:versionCode="284" android:versionName="2.8.4"
+      android:versionCode="285" android:versionName="2.8.5"
       android:installLocation="auto">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".WapdroidUI"
@@ -45,6 +45,7 @@
 			</intent-filter>
 		</receiver>
 		<service android:name=".WapdroidService" />
+		<provider android:name="com.piusvelte.wapdroid.providers.WapdroidContentProvider" android:authorities="com.piusvelte.wapdroid.providers.WapdroidContentProvider" />
 		<uses-library android:name="com.google.android.maps" />
 		<meta-data android:value="a14c03f0ced257b" android:name="ADMOB_PUBLISHER_ID" />
 		<!--
