--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.piusvelte.wapdroid"
-      android:versionCode="302" android:versionName="3.0.2"
+      android:versionCode="303" android:versionName="3.0.3"
       android:installLocation="auto">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".WapdroidUI"
@@ -33,15 +33,15 @@
     	<activity android:name=".Settings"></activity>
     	<activity android:name=".ManageData"></activity>
     	<activity android:name=".MapData"></activity>
-		<receiver android:name=".BootReceiver">
+		<receiver android:name=".Receiver">
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED" />
-				<action android:name="android.intent.action.EXTERNAL_APPLICATIONS_AVAILABLE" />
 				<action android:name="com.piusvelte.wapdroid.WAKE_SERVICE" />
+				<action android:name="android.intent.action.EXTERNAL_APPLICATIONS_AVAILABLE" />
 			</intent-filter>
 			<intent-filter>
 				<action android:name="android.intent.action.PACKAGE_REPLACED" />
-				<data android:scheme="package" />
+				<data android:scheme="package" android:path="com.piusvelte.wapdroid" />
 			</intent-filter>
 		</receiver>
 		<service android:name=".WapdroidService" />
