--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.piusvelte.wapdroid"
-      android:versionCode="303" android:versionName="3.0.3"
+      android:versionCode="304" android:versionName="3.0.4"
       android:installLocation="auto">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".WapdroidUI"
@@ -33,7 +33,7 @@
     	<activity android:name=".Settings"></activity>
     	<activity android:name=".ManageData"></activity>
     	<activity android:name=".MapData"></activity>
-		<receiver android:name=".Receiver">
+		<receiver android:name=".BootReceiver">
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED" />
 				<action android:name="com.piusvelte.wapdroid.WAKE_SERVICE" />
