--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.piusvelte.wapdroid"
-      android:versionCode="316" android:versionName="3.1.6"
+      android:versionCode="317" android:versionName="3.1.7"
       android:installLocation="auto">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".WapdroidUI"
@@ -46,6 +46,11 @@
 			</intent-filter>
 		</receiver>
 		<service android:name=".WapdroidService" />
+        <provider
+            android:name=".WapdroidProvider"
+            android:authorities="com.piusvelte.wapdroid.WapdroidProvider"
+            android:multiprocess="true"
+            android:grantUriPermissions="true" />
 		<uses-library android:name="com.google.android.maps" />
 		<!--
 		<meta-data android:name="com.google.android.backup.api_key"
