--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.piusvelte.wapdroid"
-      android:versionCode="351" android:versionName="3.5.1"
+      android:versionCode="352" android:versionName="3.5.2"
       android:installLocation="auto">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".WapdroidUI"
@@ -33,10 +33,8 @@
     	<activity android:name=".Settings"></activity>
     	<activity android:name=".ManageData"></activity>
     	<activity android:name=".MapData"></activity>
-        <activity android:name="com.admob.android.ads.AdMobActivity" 
-              android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-              android:configChanges="orientation|keyboard|keyboardHidden"
-              />
+        <activity android:name="com.google.ads.AdActivity"
+              android:configChanges="keyboard|keyboardHidden|orientation"/>
 		<receiver android:name=".BootReceiver">
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED" />
@@ -69,8 +67,6 @@
 		<meta-data android:name="com.google.android.backup.api_key"
 		android:value="AEdPqrEAAAAIlersG5aLPTzpSy9UnEVOLZD14LQ-XUa654IkZg" />
 		-->
-		<!-- The application's publisher ID assigned by AdMob -->
-    	<meta-data android:value="a14c03f0ced257b" android:name="ADMOB_PUBLISHER_ID" />
 	</application>
     <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="9"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"></uses-permission>
