--- a/ad_supported/AndroidManifest.xml
+++ b/ad_supported/AndroidManifest.xml
@@ -20,9 +20,9 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.piusvelte.wapdroid"
-      android:versionCode="377" android:versionName="3.7.7"
+      android:versionCode="378" android:versionName="3.7.8"
       android:installLocation="auto">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:backupAgent=".WapdroidBackupAgentHelper">
         <activity android:name=".WapdroidUI"
 		android:label="@string/app_name">
             <intent-filter>
@@ -63,10 +63,8 @@
             android:multiprocess="true"
             android:grantUriPermissions="true" />
 		<uses-library android:name="com.google.android.maps" />
-		<!--
 		<meta-data android:name="com.google.android.backup.api_key"
-		android:value="AEdPqrEAAAAIlersG5aLPTzpSy9UnEVOLZD14LQ-XUa654IkZg" />
-		-->
+		    android:value="AEdPqrEAAAAIlersG5aLPTzpSy9UnEVOLZD14LQ-XUa654IkZg" />
 	</application>
     <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="16"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
