--- a/core/AndroidManifest.xml
+++ b/core/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
  * Wapdroid - Android Location based Wifi Manager
- * Copyright (C) 2009 Bryan Emmanuel
+ * Copyright (C) 2012 Bryan Emmanuel
  * 
  * This program is free software: you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -19,9 +19,9 @@
  *  Bryan Emmanuel piusvelte@gmail.com
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      android:versionCode="377" android:versionName="3.7.7"
+      android:versionCode="378" android:versionName="3.7.8"
       android:installLocation="auto" package="com.piusvelte.wapdroid.core">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:backupAgent=".WapdroidBackupAgentHelper">
         <activity android:name=".WapdroidUI"
 		android:label="@string/app_name">
             <intent-filter>
@@ -62,8 +62,6 @@
             android:multiprocess="true"
             android:grantUriPermissions="true" />
 		<uses-library android:name="com.google.android.maps" />
-		<meta-data android:name="com.google.android.backup.api_key"
-		android:value="AEdPqrEAAAAIlersG5aLPTzpSy9UnEVOLZD14LQ-XUa654IkZg" />
 	</application>
     <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="16"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
