--- a/ad_supported/AndroidManifest.xml
+++ b/ad_supported/AndroidManifest.xml
@@ -22,7 +22,7 @@
       package="com.piusvelte.wapdroid"
       android:versionCode="378" android:versionName="3.7.8"
       android:installLocation="auto">
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:backupAgent="WapdroidBackupAgentHelper">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:backupAgent="WapdroidBackupAgent">
         <activity android:name=".WapdroidUI"
 		android:label="@string/app_name">
             <intent-filter>
