--- a/core/project.properties
+++ b/core/project.properties
@@ -13,3 +13,4 @@ split.density=false
 target=Google Inc.:Google APIs:19
 apk-configurations=
 android.library=true
+android.library.reference.1=../../Eidos
