--- a/pro/AndroidManifest.xml
+++ b/pro/AndroidManifest.xml
@@ -25,7 +25,7 @@
     android:versionName="3.7.9" >
 
     <application
-        android:backupAgent="WapdroidBackupAgent"
+        android:backupAgent="com.piusvelte.eidos.Eidos"
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
         <activity
