--- a/core/AndroidManifest.xml
+++ b/core/AndroidManifest.xml
@@ -29,11 +29,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    	<activity android:name=".Settings"></activity>
-    	<activity android:name=".ManageData"></activity>
-    	<activity android:name=".MapData"></activity>
+    	<activity android:name=".Settings" />
+    	<activity android:name=".ManageData" />
         <activity android:name="com.google.ads.AdActivity"
-              android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
+              android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
 		<receiver android:name=".BootReceiver">
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED" />
