--- a/ad_supported/AndroidManifest.xml
+++ b/ad_supported/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
  * Wapdroid - Android Location based Wifi Manager
  * Copyright (C) 2012 Bryan Emmanuel
  *
@@ -22,16 +21,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.piusvelte.wapdroid"
     android:installLocation="auto"
-    android:versionCode="379"
-    android:versionName="3.7.9" >
+    android:versionCode="380"
+    android:versionName="4.0">
 
     <application
         android:backupAgent="WapdroidBackupAgent"
         android:icon="@drawable/icon"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme">
         <activity
-            android:name=".WapdroidUI"
-            android:label="@string/app_name" >
+            android:name=".MainActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -39,12 +39,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".Settings" />
-        <activity android:name=".ManageData" />
         <activity
-            android:name="com.google.ads.AdActivity"
+            android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
 
-        <receiver android:name=".BootReceiver" >
+        <receiver android:name=".BootReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
@@ -64,12 +63,12 @@
 
         <receiver
             android:name=".WapdroidWidget"
-            android:label="@string/widget_label" >
+            android:label="@string/widget_label">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
             <intent-filter>
-                <action android:name="com.piusvelte.wapdroid.Wapdroid.TOGGLE_SERVICE" />
+                <action android:name="com.piusvelte.wapdroid.TOGGLE_SERVICE" />
             </intent-filter>
 
             <meta-data
@@ -83,15 +82,16 @@
             android:grantUriPermissions="true"
             android:multiprocess="true" />
 
-        <uses-library android:name="com.google.android.maps" />
-
         <meta-data
             android:name="com.google.android.backup.api_key"
             android:value="AEdPqrEAAAAIlersG5aLPTzpSy9UnEVOLZD14LQ-XUa654IkZg" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 
     <uses-sdk
-        android:minSdkVersion="3"
+        android:minSdkVersion="9"
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
