--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -84,6 +84,13 @@
             android:value="@integer/google_play_services_version" />
     </application>
 
+    <uses-feature
+        android:name="android.hardware.wifi"
+        android:required="true" />
+    <uses-feature
+        android:name="android.hardware.location.gps"
+        android:required="true" />
+
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
