Intents all use the correct package name without getPackageName, thanks Gradle

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
             <intent-filter>
-                <action android:name="com.piusvelte.wapdroid.WAKE_SERVICE" />
+                <action android:name="${applicationId}.WAKE_SERVICE" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.PACKAGE_REPLACED" />
@@ -62,7 +62,7 @@
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
             <intent-filter>
-                <action android:name="com.piusvelte.wapdroid.TOGGLE_SERVICE" />
+                <action android:name="${applicationId}.TOGGLE_SERVICE" />
             </intent-filter>
 
             <meta-data
